style fix: removed overlapping styles

--- a/src/components/PageLoader/page-loader.css
+++ b/src/components/PageLoader/page-loader.css
@@ -1,8 +1,3 @@
-body {
-    height: 100vh;
-    overflow: hidden;
-    background: #faf9f8;
-}
 
 .blue {
     color: #1b1b1b;
